# coreclr-module-runtime

.github/workflows/: build.yml
c-api/: Log.h  core.cpp  core.h  func_table.cpp  func_table.h  handling_data.cpp  handling_data.h  interior.cpp  interior.h  interior_portal.cpp  interior_portal.h  interior_room.cpp  interior_room.h
c-api/cache/: CachedBaseObject.h  CachedEntity.h  CachedPlayer.h  CachedVehicle.h
c-api/data/: aabb.h  discord_user.h  interior_extend_info.h  interior_extent_info.h  vehicle_model_info.h  weapon_model_info.h
c-api/entities/: connection_info.cpp  connection_info.h  player.cpp  player.h  vehicle.cpp  vehicle.h
client/: CMakeLists.txt
client/src/: main.cpp  utils.h
client/src/coreclr/: CoreClr.cpp  CoreClr.h  CoreClrValidation.cpp
client/src/nuget/: NuGet.cpp
client/src/runtime/: CSharpResourceImpl.cpp  CSharpScriptRuntime.cpp  natives.cpp
client/tools/: deinit-cppsdk.bat
server/: windows-build.bat
server/src/: CoreClr.cpp
